# nixos-configuration

./: .flake.nix.swp  .gitignore  .gitmodules  LICENSE  README.git  README.md  configuration.nix  dotfiles.nix  flake.nix  fonts.nix  hardware-configuration.nix  layer3.nix  layer3com.nix  networking.nix  nix.nix  partition  programs.nix  sshd.nix  users.nix  wayland.nix  xserver.nix
boxes/: neptune.nix
containers/: collectd.nix  grafana.nix  graphite.nix
dotfiles/: default.nix
dotfiles/alacritty/: alacritty.yml
dotfiles/git/: gitconfig
dotfiles/nixpkgs/: config.nix
dotfiles/rtorrent/: rtorrent.rc
dotfiles/x/xmonad-config/: default.nix  xmonad-config.cabal  xmonad.hs
dotfiles/x/xmonad-config/app/: xmonad.hs
home/: home-manager.nix  programs.nix  waybar.nix  wayland.nix
home/alice/: colors.nix  default.nix  programs.nix  wayland.nix
home/modules/: waybar.nix
install/: iso.nix  partition
machines/: mercury.nix  neptune.nix  saturn.nix
machines/jupiter/: default.nix  hardware-configuration.nix
machines/neptune/: default.nix  hardware-configuration.nix
machines/saturn/: default.nix  (+1 more)
mercury/: configuration.nix  default.nix  s1token  sentinelone.nix
mopidy/: template.mopidy.conf
public-keys/: kyle.pub
services/: sshd.nix
sops/: default.nix  secrets.yaml  shell.nix
system/: audio.nix  bluetooth.nix  crypto.nix  default.nix  fonts.nix  home-manager.nix  kolide.nix  mercury.nix  networking.nix  nix.nix  programs.nix  screen-sharing.nix  steam.nix  sway.nix  unstable-nixpkgs.nix  users.nix  virtualization.nix  xserver.nix
(+38 files in other folders)
